--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       position: fixed;
       top: 0;
       width: 100%;
-      padding: 30px 50px;
+      padding: 25px 50px;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -32,7 +32,7 @@
 
     .header .logo {
       font-weight: bold;
-      font-size: 28px;
+      font-size: 20px; /* smaller header */
       cursor: pointer;
       text-decoration: none;
       color: black;
@@ -48,7 +48,7 @@
     .main-content {
       display: flex;
       justify-content: center;
-      padding-top: 120px; /* header space */
+      padding-top: 100px; /* header space */
       min-height: 100vh;
     }
 
@@ -59,10 +59,11 @@
       max-width: 900px;
       scroll-behavior: smooth;
       overflow-y: auto;
-      height: calc(100vh - 120px);
+      height: calc(100vh - 100px);
       transition: transform 0.6s ease, opacity 0.6s ease;
     }
 
+    /* Breathing effect */
     .scroll-container.recede {
       transform: scale(0.97);
       opacity: 0.85;
@@ -88,14 +89,14 @@
       max-width: 700px;
     }
 
-    /* Menu overlay */
+    /* Menu */
     .menu {
       position: fixed;
       top: 0;
       right: -25%;
       width: 25%;
       height: 100%;
-      background-color: #D2B48C; /* Tan */
+      background-color: #fff1f1f1;
       color: black;
       transition: right 0.4s ease;
       z-index: 200;
@@ -113,6 +114,7 @@
     .menu a {
       color: black;
       text-decoration: none;
+      transition: color 0.3s ease;
     }
 
     @media (max-width: 768px) {
@@ -137,14 +139,14 @@
   <!-- Main content -->
   <div class="main-content">
     <div class="scroll-container" id="scroll-container">
-      <!-- Example updates -->
+      <!-- Example updates: replace src with your own images -->
       <div class="update">
-        <img src="https://via.placeholder.com/600x400" alt="Example Image 1">
-        <img src="https://via.placeholder.com/600x400" alt="Example Image 2">
+        <img src="images/photo1.jpg" alt="Example Image 1">
+        <img src="images/photo2.jpg" alt="Example Image 2">
         <p>This week I completed a project on modern web design, exploring minimalist layouts and interactive menus.</p>
       </div>
       <div class="update">
-        <img src="https://via.placeholder.com/600x400" alt="Example Image 3">
+        <img src="images/photo3.jpg" alt="Example Image 3">
         <p>Attended an inspiring workshop on color theory and its application in web interfaces.</p>
       </div>
     </div>
@@ -152,43 +154,63 @@
 
   <!-- Menu -->
   <div class="menu" id="menu">
-    <a href="#">Artworks</a>
-    <a href="#">Workshops</a>
-    <a href="#">Sound</a>
-    <a href="#">Collabs</a>
+    <a href="artworks.html">Artworks</a>
+    <a href="workshops.html">Workshops</a>
+    <a href="sound.html">Sound</a>
+    <a href="collabs.html">Collabs</a>
     <div style="height:20px;"></div> <!-- break -->
-    <a href="#">Shop</a>
-    <a href="#">Services</a>
+    <a href="shop.html">Shop</a>
+    <a href="services.html">Services</a>
     <div style="height:20px;"></div> <!-- break -->
-    <a href="#">Biography</a>
-    <a href="#">Contact</a>
+    <a href="biography.html">Biography</a>
+    <a href="contact.html">Contact</a>
   </div>
 
   <script>
     const menu = document.getElementById('menu');
     const scrollContainer = document.getElementById('scroll-container');
+    const militaryColors = ['#6B8E23', '#4B5320', '#556B2F', '#F0E68C', '#D2B48C'];
 
     function toggleMenu() {
       const isOpen = menu.classList.contains('open');
-      if (isOpen) {
+      if(isOpen) {
         menu.classList.remove('open');
         scrollContainer.classList.remove('recede');
       } else {
         menu.classList.add('open');
-        scrollContainer.classList.add('recede'); // subtle breathing effect
+        scrollContainer.classList.add('recede');
       }
     }
 
-    // Keyboard navigation for continuous scroll
+    // Menu hover random military color
+    const menuLinks = document.querySelectorAll('.menu a');
+    menuLinks.forEach(link => {
+      link.addEventListener('mouseenter', () => {
+        const randomColor = militaryColors[Math.floor(Math.random() * militaryColors.length)];
+        link.style.color = randomColor;
+      });
+      link.addEventListener('mouseleave', () => {
+        link.style.color = 'black';
+      });
+    });
+
+    // Clicking on the scroll closes menu
+    scrollContainer.addEventListener('click', () => {
+      if(menu.classList.contains('open')) {
+        menu.classList.remove('open');
+        scrollContainer.classList.remove('recede');
+      }
+    });
+
+    // Keyboard navigation
     document.addEventListener('keydown', function(e) {
-      const scrollAmount = 200; // pixels per press
-      if (e.key === 'ArrowDown') {
-        scrollContainer.scrollBy({ top: scrollAmount, behavior: 'smooth' });
-      } else if (e.key === 'ArrowUp') {
-        scrollContainer.scrollBy({ top: -scrollAmount, behavior: 'smooth' });
+      const scrollAmount = 200;
+      if(e.key === 'ArrowDown') {
+        scrollContainer.scrollBy({top: scrollAmount, behavior:'smooth'});
+      } else if(e.key === 'ArrowUp') {
+        scrollContainer.scrollBy({top: -scrollAmount, behavior:'smooth'});
       }
     });
   </script>
-
 </body>
 </html>
