--- a/artworks.html
+++ b/artworks.html
@@ -5,17 +5,75 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Artworks - Denis Flueraru</title>
   <link href="https://fonts.googleapis.com/css2?family=Neue+Kaine:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css"> <!-- reuse CSS if you separate it -->
+  <style>
+    * {margin:0; padding:0; box-sizing:border-box;}
+    body {font-family:'Neue Kaine', sans-serif; background:white; overflow-x:hidden;}
+
+    /* Header */
+    .header {
+      position:fixed;
+      top:0;
+      width:100%;
+      padding:25px 50px;
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      background: linear-gradient(to bottom, white 0%, rgba(255,255,255,0) 100%);
+      z-index:100;
+    }
+    .header .logo { font-weight:bold; font-size:20px; cursor:pointer; text-decoration:none; color:black;}
+    .header .section-title { font-weight:400; font-size:22px; }
+    .header .menu-toggle { cursor:pointer; font-weight:bold; font-size:22px; }
+
+    /* Main content scroll */
+    .main-content { display:flex; justify-content:center; padding-top:100px; min-height:100vh; position:relative; }
+    .scroll-container {
+      display:flex; flex-direction:column; gap:60px;
+      max-width:900px; scroll-behavior:smooth;
+      overflow-y:auto; height:calc(100vh - 100px);
+      transition: transform 0.6s ease, opacity 0.6s ease;
+    }
+    .scroll-container.recede { transform:scale(0.97); opacity:0.85; }
+
+    .update { display:flex; flex-direction:column; align-items:center; text-align:center; }
+    .update img { max-width:80%; margin-bottom:10px; border-radius:4px; }
+    .update p { font-size:20px; line-height:1.6; color:#333; max-width:700px; }
+
+    /* Menu */
+    .menu {
+      position:fixed; top:0; right:-25%; width:25%; height:100%;
+      color:black; transition:right 0.4s ease; z-index:200;
+      padding:50px 20px; display:flex; flex-direction:column; gap:20px; font-size:20px;
+    }
+    .menu.open { right:0; }
+    .menu a { color:black; text-decoration:none; transition:color 0.2s ease; }
+
+    /* Grey overlay */
+    .overlay {
+      position:fixed; top:0; left:0; width:100%; height:100%;
+      background-color:rgba(128,128,128,0.2); display:none; z-index:150;
+    }
+    .overlay.active { display:block; }
+
+    @media(max-width:768px){
+      .menu{ width:50%; right:-50%; }
+      .menu.open{ right:0; }
+    }
+  </style>
 </head>
 <body>
+
+  <!-- Header -->
   <div class="header">
     <a href="https://denisflueraru.github.io/" class="logo">Denis Flueraru</a>
     <span class="section-title">Artworks</span>
     <span class="menu-toggle" onclick="toggleMenu()">Menu</span>
   </div>
 
+  <!-- Overlay -->
   <div class="overlay" id="overlay"></div>
 
+  <!-- Main content -->
   <div class="main-content">
     <div class="scroll-container" id="scroll-container">
       <div class="update">
@@ -26,9 +84,15 @@
         <img src="images/art2.jpg" alt="Artwork 2">
         <p>Description or title of artwork 2.</p>
       </div>
+      <div class="update">
+        <img src="images/art3.jpg" alt="Artwork 3">
+        <p>Description or title of artwork 3.</p>
+      </div>
+      <!-- Add more artworks here -->
     </div>
   </div>
 
+  <!-- Menu -->
   <div class="menu" id="menu">
     <a href="artworks.html">Artworks</a>
     <a href="workshops.html">Workshops</a>
@@ -42,6 +106,53 @@
     <a href="contact.html">Contact</a>
   </div>
 
-  <script src="menu.js"></script> <!-- same JS as index.html -->
+  <script>
+    const menu = document.getElementById('menu');
+    const scrollContainer = document.getElementById('scroll-container');
+    const overlay = document.getElementById('overlay');
+    const neonColors = ['#39FF14','#FF5F1F']; // neon green, neon orange
+
+    // Toggle menu open/close
+    function toggleMenu(){
+      const isOpen = menu.classList.contains('open');
+      if(isOpen){
+        menu.classList.remove('open');
+        scrollContainer.classList.remove('recede');
+        overlay.classList.remove('active');
+      } else {
+        menu.classList.add('open');
+        scrollContainer.classList.add('recede');
+        overlay.classList.add('active');
+        const randomColor = neonColors[Math.floor(Math.random()*neonColors.length)];
+        menu.style.backgroundColor = randomColor;
+      }
+    }
+
+    // Menu hover neon effect
+    document.querySelectorAll('.menu a').forEach(link => {
+      link.addEventListener('mouseenter', () => {
+        const randomColor = neonColors[Math.floor(Math.random()*neonColors.length)];
+        link.style.color = randomColor;
+      });
+      link.addEventListener('mouseleave', () => link.style.color = 'black');
+    });
+
+    // Clicking on scroll closes menu
+    scrollContainer.addEventListener('click', () => {
+      if(menu.classList.contains('open')){
+        menu.classList.remove('open');
+        scrollContainer.classList.remove('recede');
+        overlay.classList.remove('active');
+      }
+    });
+
+    // Arrow keys navigation
+    document.addEventListener('keydown', e => {
+      const scrollAmount = 200;
+      if(e.key==='ArrowDown') scrollContainer.scrollBy({top:scrollAmount, behavior:'smooth'});
+      if(e.key==='ArrowUp') scrollContainer.scrollBy({top:-scrollAmount, behavior:'smooth'});
+    });
+  </script>
+
 </body>
 </html>
