--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     * {margin:0; padding:0; box-sizing:border-box;}
     body {font-family:'Neue Kaine', sans-serif; background:white; overflow-x:hidden;}
 
+    /* Hide scrollbar */
+    ::-webkit-scrollbar { display:none; }
+    .scroll-container { -ms-overflow-style:none; scrollbar-width:none; }
+
     /* Header */
     .header {
       position:fixed;
@@ -17,37 +21,58 @@
       padding:25px 50px;
       display:flex;
       justify-content:space-between;
-      align-items:center;
+      align-items:flex-start;
       background: linear-gradient(to bottom, white 0%, rgba(255,255,255,0) 100%);
       z-index:100;
+      flex-direction:row;
     }
-    .header .logo { font-weight:bold; font-size:20px; cursor:pointer; text-decoration:none; color:black;}
-    .header .section-title { font-weight:400; font-size:22px; }
-    .header .menu-toggle { cursor:pointer; font-weight:bold; font-size:22px; }
+    .header-left {
+      display:flex;
+      flex-direction:column;
+      align-items:flex-start;
+    }
+    .header .logo {
+      font-weight:bold; font-size:20px; cursor:pointer;
+      text-decoration:none; color:black; margin-bottom:5px;
+    }
+    .header .atomat-logo img {
+      max-width:80px; cursor:pointer;
+    }
+    .header .menu-toggle { cursor:pointer; font-weight:bold; font-size:22px; align-self:flex-start; }
 
     /* Main content scroll */
-    .main-content { display:flex; justify-content:center; padding-top:100px; min-height:100vh; position:relative; }
+    .main-content {
+      display:flex; justify-content:center; padding-top:120px;
+      min-height:100vh; position:relative;
+    }
     .scroll-container {
       display:flex; flex-direction:column; gap:60px;
       max-width:900px; scroll-behavior:smooth;
-      overflow-y:auto; height:calc(100vh - 100px);
+      overflow-y:auto; height:calc(100vh - 120px);
       transition: transform 0.6s ease, opacity 0.6s ease;
     }
     .scroll-container.recede { transform:scale(0.97); opacity:0.85; }
 
-    .update { display:flex; flex-direction:column; align-items:center; text-align:center; }
+    .update {
+      display:flex; flex-direction:column; align-items:center;
+      text-align:center; padding:0 40px;
+    }
     .update img { max-width:80%; margin-bottom:10px; border-radius:4px; }
     .update p { font-size:20px; line-height:1.6; color:#333; max-width:700px; }
+
+    /* Alternate alignment */
+    .update.left { align-items:flex-start; text-align:left; }
+    .update.right { align-items:flex-end; text-align:right; }
 
     /* Menu */
     .menu {
       position:fixed; top:0; right:-25%; width:25%; height:100%;
-      background-color:#C5D642; color:black; transition:right 0.4s ease; z-index:200;
+      background-color:#f1f1f1; color:black; transition:right 0.4s ease; z-index:200;
       padding:50px 20px; display:flex; flex-direction:column; gap:20px; font-size:20px;
     }
     .menu.open { right:0; }
     .menu a { color:black; text-decoration:none; transition:color 0.2s ease; }
-    .menu a:hover { color:white; }
+    .menu a:hover { color:#FF8026; }
 
     /* Grey overlay */
     .overlay {
@@ -66,8 +91,12 @@
 
   <!-- Header -->
   <div class="header">
-    <a href="https://denisflueraru.github.io/" class="logo">Denis Flueraru</a>
-    <span class="section-title">Home</span>
+    <div class="header-left">
+      <a href="https://denisflueraru.github.io/" class="logo">Denis Flueraru</a>
+      <a href="https://atomatlab.com" class="atomat-logo" target="_blank">
+        <img src="images/atomatlab.png" alt="Atomat Lab Logo">
+      </a>
+    </div>
     <span class="menu-toggle" onclick="toggleMenu()">Menu</span>
   </div>
 
@@ -77,14 +106,18 @@
   <!-- Main content -->
   <div class="main-content">
     <div class="scroll-container" id="scroll-container">
-      <div class="update">
-        <img src="images/Beyondthenoisetheconcretespeaks2.JPG" alt="Example Image 1">
+      <div class="update left">
+        <img src="images/photo1.jpg" alt="Example Image 1">
         <img src="images/photo2.jpg" alt="Example Image 2">
         <p>This week I completed a project on modern web design, exploring minimalist layouts and interactive menus.</p>
       </div>
-      <div class="update">
-        <img src="images/RYT_2.jpg" alt="Example Image 3">
+      <div class="update right">
+        <img src="images/photo3.jpg" alt="Example Image 3">
         <p>Attended an inspiring workshop on color theory and its application in web interfaces.</p>
+      </div>
+      <div class="update left">
+        <img src="images/photo4.jpg" alt="Example Image 4">
+        <p>Working on experimental compositions combining visuals and sound.</p>
       </div>
     </div>
   </div>
@@ -130,7 +163,7 @@
       }
     });
 
-    // Clicking on scroll also closes menu
+    // Clicking on scroll closes menu
     scrollContainer.addEventListener('click', () => {
       if(menu.classList.contains('open')){
         menu.classList.remove('open');
