--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     /* Menu */
     .menu {
       position:fixed; top:0; right:-25%; width:25%; height:100%;
-      background-color:#3b5323; /* green army tint */
+      background-color:#b6d228; /* green army tint */
       color:black; transition:right 0.4s ease; z-index:200;
       padding:50px 20px; display:flex; flex-direction:column; gap:20px; font-size:20px;
     }
@@ -85,7 +85,7 @@
       color:black; text-decoration:none; transition:color 0.2s ease;
       display:inline-flex; align-items:center;
     }
-    .menu a:hover { color:#8B4513; } /* brown hover */
+    .menu a:hover { color:#cd6c27; } /* brown hover */
     .menu-icon {
       height:1em; margin-left:5px; vertical-align:middle;
     }
@@ -125,8 +125,25 @@
       <div class="update">
         <img src="images/photo1.jpg" alt="Example Image 1">
         <img src="images/photo2.jpg" alt="Example Image 2">
-        <p>This week I completed a project on modern web design, exploring minimalist layouts and interactive menus.</p>
-      </div>
+<p>
+  As this year’s 
+  <a href="https://artistsplaywithtime.ro/" target="_blank" class="custom-link">
+    Artists Play with Time
+  </a> 
+  project came to an end, I was invited to lead a workshop on building contact microphones with preamps. Participants explored how to make their own devices and experiment with the hidden sounds of everyday objects.
+</p>
+</div>
+
+<style>
+  .custom-link {
+    text-decoration: underline;   /* underline the text */
+    color: inherit;              /* keep same color as surrounding text */
+  }
+
+  .custom-link:hover {
+    color: green;                /* turns green on hover */
+  }
+</style>
       <div class="update">
         <img src="images/photo3.jpg" alt="Example Image 3">
         <p>Attended an inspiring workshop on color theory and its application in web interfaces.</p>
