--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     /* Menu */
     .menu {
       position:fixed; top:0; right:-25%; width:25%; height:100%;
-      background-color:#b6d228; /* green army tint */
+      background-color:rgb(182, 210, 40); /* green army tint */
       color:black; transition:right 0.4s ease; z-index:200;
       padding:50px 20px; display:flex; flex-direction:column; gap:20px; font-size:20px;
     }
@@ -123,14 +123,13 @@
   <div class="main-content">
     <div class="scroll-container" id="scroll-container">
       <div class="update">
-        <img src="images/photo1.jpg" alt="Example Image 1">
-        <img src="images/photo2.jpg" alt="Example Image 2">
+        <img src="images/WORKSHOP_ATPWT_CAV.jpg">
 <p>
   As this year’s 
   <a href="https://artistsplaywithtime.ro/" target="_blank" class="custom-link">
     Artists Play with Time
   </a> 
-  project came to an end, I was invited to lead a workshop on building contact microphones with preamps. Participants explored how to make their own devices and experiment with the hidden sounds of everyday objects.
+  project came to an end, I was invited to lead a workshop on building contact microphones with preamps at CAV Gallery, Bucharest. Participants explored how to make their own devices and experiment with the hidden sounds of everyday objects.
 </p>
 </div>
 
@@ -141,12 +140,26 @@
   }
 
   .custom-link:hover {
-    color: green;                /* turns green on hover */
+    color: rgb(182, 210, 40);                /* turns green on hover */
   }
 </style>
       <div class="update">
-        <img src="images/photo3.jpg" alt="Example Image 3">
-        <p>Attended an inspiring workshop on color theory and its application in web interfaces.</p>
+        <img src="images/YOKOGAWA1.JPG">
+        <p>In collaboration with 
+          <a href="https:/fablab.ro/" target="_blank" class="custom-link">
+    FabLab Bucharest
+  </a> , I worked on a Fresh Water Generator concept model for YOKOGAWA. I handled the entire LED setup, including soldering, mounting, configuring the channels and finally programmed animations to bring the model to life. Additionally, I designed and implemented sound interactions to enhance the experience of the model, integrating both light and sound for a dynamic demonstration.</p>
+  </div>
+
+<style>
+  .custom-link {
+    text-decoration: underline;   /* underline the text */
+    color: inherit;              /* keep same color as surrounding text */
+  }
+
+  .custom-link:hover {
+    color: rgb(182, 210, 40);                /* turns green on hover */
+  }
       </div>
       <div class="update">
         <img src="images/photo4.jpg" alt="Example Image 4">
